# bha-racing-data-analytics

./: .gitignore  README.md  manage.py  pyproject.toml  pytest.ini
config/: base.py  celery.py
config/settings/: base.py  development.py  production.py
scraper/: manager.py  step1_fixtures.py  utils.py
tests/: conftest.py  test_setup.py
