[build-system]
requires = ["hatchling >= 1.28.0"]
build-backend = "hatchling.build"

[project]
name = "bha_horse_racing_result_scraper_and_analyzer"
version = "0.0.1"
description = "Horse racing data scraper and analyzer with Django integration"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
    { name = "zaafiel428", email = "rzuckasto@gmail.com" },
]
keywords = ["scraper", "horseracing", "etl", "django", "postgresql"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django :: 5.0",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

# Core dependencies - Django-based application
dependencies = [
    "django>=5.2.9,<6.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.5",
    "playwright>=1.57.0",
]

[project.optional-dependencies]
# Development & testing
dev = [
    "pytest>=9.0",
    "pytest-django>=4.11",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7.0",
    "ruff>=0.14",
    "basedpyright>=1.36",
    "ipython>=9.8",
    "django-debug-toolbar>=4.4",
    "django-extensions>=3.2",
]

# HTML parsing (only if you actually need it)
html = [
    "beautifulsoup4>=4.14",
    "lxml>=5.0",
]

# Background jobs (optional architecture)
celery = [
    "celery>=5.4",
]

# Production deployment helpers
prod = [
    "gunicorn>=23.0",
    "whitenoise>=6.8",
    "sentry-sdk>=2.0",
]

[project.urls]
Homepage = "https://github.com/andre428/bha_scraper_manager"
Repository = "https://github.com/andre428/bha_scraper_manager"

# ============================================================================
# Hatchling Configuration
# ============================================================================
[tool.hatch.build.targets.wheel]
packages = ["scraper"]

[tool.hatch.build.targets.sdist]
include = [
    "/scraper",
    "/tests",
    "/README.md",
    "/LICENSE",
]
exclude = [
    "/.git",
    "/.venv",
    "/.pytest_cache",
    "/.ruff_cache",
    "/dist",
    "/build",
    "**/__pycache__",
    "**/*.pyc",
]

# ============================================================================
# Ruff Configuration
# ============================================================================
[tool.ruff]
target-version = "py313"
line-length = 100
indent-width = 4

extend-exclude = [
    "migrations",
    "cache",
    "*.db",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "B", # flake8-bugbear
    "I", # isort
    "N", # pep8-naming
    "UP", # pyupgrade
    "S", # flake8-bandit (security)
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T20", # flake8-print
    "RET", # flake8-return
    "SIM", # flake8-simplify
]

ignore = [
    "E501",
    "S101",
    "T201",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101", "T201"]
"*/migrations/*" = ["E501", "N806"]
"test_*.py" = ["S101", "T201"]

[tool.ruff.lint.isort]
known-first-party = ["racing", "scraper", "config"]
combine-as-imports = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.mccabe]
max-complexity = 10

# ============================================================================
# Basedpyright Configuration
# ============================================================================
[tool.basedpyright]
pythonVersion = "3.14"  # Minimum supported
typeCheckingMode = "standard"

# Include patterns
include = ["scraper", "tests", "test_pipeline.py"]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/venv",
    "**/.pytest_cache",
    "**/build",
    "**/dist",
    "**/cache",
]

reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true
reportGeneralTypeIssues = true
reportOptionalMemberAccess = "warning"
reportUnknownMemberType = "warning"

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-v",
]

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "requires_network: marks tests requiring internet",
    "requires_playwright: marks tests requiring browser",
]

asyncio_mode = "auto"

filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ============================================================================
# Coverage Configuration
# ============================================================================
[tool.coverage.run]
source = ["scraper"]
omit = [
    "*/tests/*",
    "**/test_*.py",
    "**/__pycache__/*",
    "**/conftest.py",
    "*/migrations/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
]

# ============================================================================
# Django Configuration (for when integrated)
# ============================================================================
# Uncomment and configure when setting up Django project
# [tool.django]
# settings_module = "your_project.settings"
